--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="#">Criptomonedas</a></li>
         <li><a href="#">Cursos</a></li>
         <li><a href="#">Contacto</a></li>
+        <li><a href="#">Login</a></li>
       </ul>
     </nav>
     <main>
@@ -43,8 +44,15 @@
         </article>
       </section>
       <aside>
-        <form action="#" method="post">
-          <label for="email">Suscríbete a nuestro boletín</label>
+        <form action="procesar_formulario.php" method="post">
+          <label for="nombre">Nombre:</label>
+          <input
+            type="text"
+            id="nombre"
+            name="nombre"
+            placeholder="Nombre completo"
+          />
+          <label for="email">Correo electrónico:</label>
           <input
             type="email"
             id="email"
